python3.12 (3.12.2-5) UNRELEASED; urgency=medium

  * Update to the 3.12 branch 2024-02-02.
    - Make C API compatible with ISO C90 (GH-116950). Closes: #1064028.
    - Upstream patch for GH-115874.
    - Still identify as "3.12.2", because "3.12.2+" is mis-treated by some
      third-party packages.
  * Use CFLAGS_NODIST, LDFLAGS_NODIST for passing build flags.

 -- Matthias Klose <doko@debian.org>  Tue, 02 Apr 2024 12:34:19 +0200

python3.12 (3.12.2-4) unstable; urgency=medium

  [ Stefano Rivera ]
  * Build-Depend on libnsl-dev for NIS support. Closes: #1065128.

  [ Matthias Klose ]
  * Fix override files for renamed t64 packages.
  * Fix package names in PVER-dbg maintainer scripts. Addresses: #1065164.
  * Really build without LTO when requested.
  * Disable LTO builds and testsuite for now (mesa t64 transition ...).

 -- Matthias Klose <doko@debian.org>  Sun, 03 Mar 2024 10:11:00 +0100

python3.12 (3.12.2-3) unstable; urgency=medium

  * Actually apply the teedataobject_clear patch. Closes: #1063345.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 29 Feb 2024 11:43:19 -0400

python3.12 (3.12.2-2) unstable; urgency=medium

  [ Colin Watson ]
  * Don't rely on module state in teedataobject_clear (from Brandt Bucher in
    https://github.com/python/cpython/issues/115874). Closes: #1063345.

  [ Steve Langasek ]
  * Rename libraries for 64-bit time_t transition, declare X-Time64-Compat
    to get proper Provides (Steve Langasek). Closes: #1064336.

 -- Matthias Klose <doko@debian.org>  Thu, 29 Feb 2024 02:56:09 +0100

python3.12 (3.12.2-1) unstable; urgency=medium

  * Python 3.12.2 release.
  * Don't build-depend on systemtap-sdt-dev on the Hurd.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 07 Feb 2024 21:47:03 +0100

python3.12 (3.12.1-2) unstable; urgency=medium

  * Fix build with WITH_PYMALLOC_RADIX_TREE=0 (needed for ia64).

 -- Matthias Klose <doko@debian.org>  Fri, 08 Dec 2023 17:20:54 +0100
